basic functions with multiple inputs and outputs

--- a/functions.Rmd
+++ b/functions.Rmd
@@ -11,7 +11,7 @@ library(rvest)
 set.seed(1)
 ```
 
-## Z-Score Function
+## Simple Z-Score function
 
 ```{r}
 x_vec = rnorm(30, mean = 5, sd = 3)
@@ -61,5 +61,73 @@ z_scores = function(x) {
 }
 
 z_scores(x_vec)
+```
+
+## Functions with multiple outputs
+
+```{r}
+mean_and_sd = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Input must be numeric")
+  }
+  
+  if (length(x) < 3) {
+    stop("Input must have at least numbers")
+  }
+    
+  mean_x = mean(x)
+  sd_x = sd(x)
+  
+  tibble(
+    mean = mean_x,
+    sd = sd_x
+  )
+  
+}
+```
+
+Checking to see if function works
+
+```{r}
+x_vec = rnorm(1000)
+mean_and_sd(x_vec)
+```
+
+## Multiple inputs
+
+```{r}
+sim_data = 
+  tibble(
+    x = rnorm(100, mean = 4, sd = 3)
+  )
+
+sim_data |> 
+  summarize(
+    mean = mean(x),
+    sd = sd(x)
+  )
+```
+
+Turning this into a function
+
+```{r}
+sim_mean_sd = function(samp_size, mu, sigma) {
+  
+  sim_data = 
+  tibble(
+    x = rnorm(n = samp_size, mean = mu, sd = sigma)
+  )
+
+  sim_data |> 
+    summarize(
+      mean = mean(x),
+      sd = sd(x)
+  )
+
+}
+
+# testing function
+sim_mean_sd(100, 6, 3)
 ```
 
