--- a/iteration_and_listcols.Rmd
+++ b/iteration_and_listcols.Rmd
@@ -95,6 +95,55 @@ output = map(list_norm, mean_and_sd)
 Using another function
 
 ```{r}
-output = map(list_norm, median)
+output = map_dbl(list_norm, median)
+
+output = map_df(list_norm, mean_and_sd, .id = "input")
 ```
+
+## List columns
+
+```{r}
+listcol_df = 
+  tibble(
+    name = c("a", "b", "c", "d"),
+    samp = list_norm
+  )
+
+listcol_df |> pull(name)
+listcol_df |> pull(samp)
+
+listcol_df |> 
+  filter(
+    name == "a"
+  )
+```
+
+Some operations
+
+```{r}
+listcol_df$samp
+
+listcol_df$samp[[1]]
+
+mean_and_sd(listcol_df$samp[[1]])
+mean_and_sd(listcol_df$samp[[2]])
+
+# using map
+
+map(listcol_df$samp, mean_and_sd)
+
+# adding a list column
+
+listcol_df = 
+  listcol_df |> 
+    mutate(
+     summary = map(samp, mean_and_sd),
+     medians = map_dbl(samp, median)
+    )
+listcol_df
+```
+
+
+
+
 
