--- a/iteration_and_listcols.Rmd
+++ b/iteration_and_listcols.Rmd
@@ -143,7 +143,80 @@ listcol_df =
 listcol_df
 ```
 
+## Weather data
 
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
 
+Getting list columns
 
+```{r}
+weather_nest = 
+  weather_df |> 
+  nest(data = date:tmin)
+```
+
+```{r}
+weather_nest |> 
+  pull(name)
+
+weather_nest |> 
+  pull(data)
+
+# looking at nested Waterhole data
+
+weather_nest$data[[3]]
+```
+
+Regressing `tmax` on `tmin` for each station
+
+```{r}
+lm(tmax ~ tmin, data = weather_nest$data[[1]])
+```
+
+Writing a function to regress all three groups
+
+```{r}
+weather_lm = function(df) {
+  
+  lm(tmax ~ tmin, data = df)
+  
+}
+
+# using for loop
+
+output = vector("list", 3)
+
+for (i in 1:3) {
+  
+  output[[i]] = lm(tmax ~ tmin, data = weather_nest$data[[i]])
+  
+}
+
+# using a map
+
+map(weather_nest$data, weather_lm)
+
+# map in a list column
+
+weather_nest |> 
+  mutate(
+    models = map(data, weather_lm)
+  )
+```
 
